Removed mocks from tests.  Added checkstyle.